[package]
name = "cue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
